Add ability to switch between languages

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -2,6 +2,7 @@
     "close": "Close",
     "create": "Create",
     "delete": "Delete",
+    "edit": "Edit",
 
     "navigation": {
         "home": "Home",
