--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -32,6 +32,6 @@
         "title": "Inloggen",
         "desc": "Kies een van de volgende opties om verder te gaan.",
         "zeus": "Inloggen met Zeus WPI",
-        "github": "Inloggen Github"
+        "github": "Inloggen met Github"
     }
 }
