Add pull requests & support for proposed spec

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -40,6 +40,11 @@
         "new": "New issue"
     },
 
+    "pulls": {
+        "search": "Search for a pull request",
+        "new": "New pull request"
+    },
+
     "login": {
         "title": "Login",
         "desc": "Choose one of the following options to continue.",
