Add popular projects to homepage

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -16,6 +16,10 @@
         "title": "Are you sure?"
     },
 
+    "home":{
+        "projects": "Popular projects"
+    },
+
     "projects": {
         "more": "More info",
         "new": "New project",
