--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -49,7 +49,11 @@
 
     "issues": {
         "search": "Search for an issue",
-        "new": "New issue",
+        "new": {
+            "button": "New issue",
+            "title": "Create a new issue",
+            "desc": "Create a new issue for one of the linked repositories."
+        },
         "empty": {
             "title": "No issues available",
             "desc": "Issues are used to track todos, bugs, feature requests, and more. As issues are created, they’ll appear here in a searchable and filterable list."
@@ -62,7 +66,11 @@
 
     "pulls": {
         "search": "Search for a pull request",
-        "new": "New pull request",
+        "new": {
+            "button": "New pull request",
+            "title": "Create a new pull request",
+            "desc": "Create a new pull request for one of the linked repositories."
+        },
         "empty": {
             "title": "No pull requests available",
             "desc": "Pull requests help you collaborate on code with other people. As pull requests are created, they’ll appear here in a searchable and filterable list."
