Add initial global search page

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -9,6 +9,7 @@
     "navigation": {
         "home": "Home",
         "projects": "Projects",
+        "search": "Search",
         "login": "Login"
     },
 
