--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -107,6 +107,28 @@
         }
     },
 
+    "tags": {
+        "search": "Search for a tag",
+        "delete": "Are you sure you want to delete this tag? This cannot be undone!",
+        "create": {
+            "button": "New tag",
+            "title": "Create a new tag",
+            "desc": "This is some random text that has to be soo long so I can SEEEEEEEEEEEEEEEEEEEE if it will fit when we rescale on mobile. I am just making random things up. Help Me!"
+        },
+        "info": {
+            "title": "Available tags",
+            "desc": "This is some random text that has to be soo long so I can SEEEEEEEEEEEEEEEEEEEE if it will fit when we rescale on mobile. I am just making random things up. Help Me!"
+        },
+        "empty": {
+            "title": "No tags available",
+            "desc": "When tags become available they will appear here."
+        },
+        "unmatched": {
+            "title": "No tags found for the given parameters",
+            "desc": "Try changing some parameters."
+        }
+    },
+
     "login": {
         "title": "Login",
         "desc": "Choose one of the following options to continue.",
