Add ability to modify tag

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,6 +5,7 @@
     "cancel": "Cancel",
     "confirm": "Confirm",
     "edit": "Edit",
+    "save": "Save",
 
     "navigation": {
         "home": "Home",
