Fix typo in placeholder

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -119,7 +119,7 @@
         },
         "info": {
             "title": "Available tags",
-            "desc": "Todo: some description hereg"
+            "desc": "Todo: some description here"
         },
         "empty": {
             "title": "No tags available",
