--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -6,6 +6,7 @@
     "confirm": "Confirm",
     "edit": "Edit",
     "save": "Save",
+    "overview": "Overview",
 
     "navigation": {
         "home": "Home",
