Translate tags edit modal

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -137,6 +137,11 @@
         "unmatched": {
             "title": "No tags found for the given parameters",
             "desc": "Try changing some parameters."
+        },
+        "edit": {
+            "title": "Edit tags",
+            "desc": "Edit tags for:",
+            "success": "Tags have been successfully linked"
         }
     },
 
