--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -115,6 +115,10 @@
         "unmatched": {
             "title": "No repositories found for the given parameters",
             "desc": "Try changing some parameters."
+        },
+        "manager": {
+            "title": "Repository Manager",
+            "success": "Repositories have been successfully updated"
         }
     },
 
@@ -122,9 +126,29 @@
         "search": "Search for a tag",
         "delete": "Are you sure you want to delete this tag? This cannot be undone!",
         "create": {
-            "button": "New tag",
-            "title": "Create a new tag",
-            "desc": "Todo: some description here"
+            "button": "New tag"
+        },
+        "modify": {
+            "title": "New tag",
+            "desc": "Create a new global G2 tag.",
+            "preview": {
+                "name": "Tag preview",
+                "desc": "This is a preview tag"
+            },
+            "fields": {
+                "name": {
+                    "label": "Name",
+                    "placeholder": "Name of the tag"
+                },
+                "color": {
+                    "label": "Color",
+                    "placeholder": "Color of the tag"
+                },
+                "description": {
+                    "label": "Description",
+                    "placeholder": "Description of the tag"
+                }
+            }
         },
         "info": {
             "title": "Available tags",
