Translate issue/pull table

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -58,6 +58,8 @@
     "issues": {
         "name": "Issues",
         "search": "Search for an issue",
+        "open": "Open",
+        "closed": "Closed",
         "new": {
             "button": "New issue",
             "title": "Create a new issue",
