Translate featured items

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -176,6 +176,10 @@
         "empty": "No contributors available."
     },
 
+    "featured": {
+        "title": "Featured"
+    },
+
     "item": {
         "context": {
             "feature": "Feature",
